--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,12 @@
 .idea/workspace.xml
+__pycache__/
+*.py[cod]
+*$py.class
+.pytest_cache/
+venv/
+env/
+*.egg-info/
+
+# IDE
+.vscode/
+.idea/misc.xml
